--- a/src/assets/css/quick-access.css
+++ b/src/assets/css/quick-access.css
@@ -31,10 +31,4 @@
   transform: translateX(-50%);
 }
 
-body {
-  background-color: #fbfcff;
-  width: 100vw;
-  height: 100vh;
-}
-
-/*# sourceMappingURL=screen.css.map */
+/*# sourceMappingURL=quick-access.css.map */
