--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1,3 +1,43 @@
+#recent-trips ul {
+  display: flex;
+  flex-direction: row;
+}
+#recent-trips ul li {
+  width: 12rem;
+  height: 5rem;
+  position: relative;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  box-sizing: border-box;
+  border: 1px solid;
+}
+#recent-trips ul li h2 {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+#recent-trips ul li h3 {
+  font-weight: normal;
+}
+#recent-trips ul li div {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  padding: 0.3rem 0.5rem 0.5rem;
+  left: 0;
+  width: calc(100% - 1rem);
+  border-top: 1px solid;
+  font-size: 0.8rem;
+}
+#recent-trips ul li div .to {
+  margin-left: 1.2rem;
+  position: relative;
+  font-weight: bold;
+}
+#recent-trips ul li div p:last-child {
+  margin-left: auto;
+  display: block;
+}
+
 #quick-access {
   position: absolute;
   width: 100%;
@@ -35,6 +75,7 @@ body {
   background-color: #fbfcff;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=screen.css.map */
