--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1,6 +1,8 @@
 #recent-trips ul {
   display: flex;
   flex-direction: row;
+  overflow-x: scroll;
+  margin: 1rem 0;
 }
 #recent-trips ul li {
   width: 12rem;
@@ -10,6 +12,8 @@
   border-radius: 1rem;
   box-sizing: border-box;
   border: 1px solid;
+  flex-shrink: 0;
+  margin-right: 1rem;
 }
 #recent-trips ul li h2 {
   font-weight: bold;
@@ -33,6 +37,11 @@
   position: relative;
   font-weight: bold;
 }
+#recent-trips ul li div .to::before {
+  content: "-";
+  position: absolute;
+  left: -0.75rem;
+}
 #recent-trips ul li div p:last-child {
   margin-left: auto;
   display: block;
@@ -45,7 +54,7 @@
   bottom: 0;
   background-color: #fbfcff;
   box-sizing: border-box;
-  padding: 3rem 2rem;
+  padding: 3rem 0 3rem 2rem;
   box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
   transition: bottom 0.3s ease-in-out;
 }
