--- a/src/assets/scss/_quick-access.scss
+++ b/src/assets/scss/_quick-access.scss
@@ -2,14 +2,13 @@
 @import './variables';
 
 #quick-access {
-
     position: absolute;
     width: 100%;
     height: 100vh;
     bottom: 0;
     background-color: $background-primary;
     box-sizing: border-box;
-    padding: 3rem 2rem;
+    padding: 3rem 0 3rem 2rem;
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
 
     transition: bottom 0.3s ease-in-out;
