--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -80,6 +80,30 @@
   transform: translateX(-50%);
 }
 
+.searchbar {
+  position: absolute;
+  width: 75%;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.7rem 2rem 0.7rem 1rem;
+  border-radius: 3rem;
+  box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
+  box-sizing: border-box;
+}
+.searchbar label {
+  position: absolute;
+  right: 0.75rem;
+  top: 0.7rem;
+}
+.searchbar input {
+  border: 0;
+  width: 95%;
+}
+.searchbar input:focus {
+  outline: none;
+}
+
 body {
   background-color: #fbfcff;
   width: 100vw;
