--- a/src/assets/scss/components/_recent-trip.scss
+++ b/src/assets/scss/components/_recent-trip.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 #recent-trips {
     ul {
         display: flex;
@@ -12,16 +14,17 @@
             padding: 0.5rem;
             border-radius: 1rem;
             box-sizing: border-box;
-            border: 1px solid;
+            border: 1px solid lighten($text-primary, 20%);
             flex-shrink: 0;
             margin-right: 1rem;
 
             h2 {
-                font-weight: bold;
-                font-size: 1.1rem;
+                font-weight: 700;
+                font-size: 0.9rem;
             }
 
             h3 {
+                font-size: 0.85rem;
                 font-weight: normal;
             }
 
@@ -32,7 +35,7 @@
                 padding: .3rem .5rem .5rem;
                 left: 0;
                 width: calc(100% - 1rem);
-                border-top: 1px solid;
+                border-top: 1px solid lighten($text-primary, 20%);
                 font-size: 0.8rem;
 
                 .to {
