Add account settings styling

--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -1,6 +1,7 @@
 @use "./components/quick-access";
 @use "./components/searchbar";
 @use "./components/friendlist";
+@use "./components/usersettings";
 
 @import "./variables";
 
@@ -12,6 +13,12 @@ body {
     overflow: hidden;
     font-family: 'Roboto', sans-serif;
     color: $text-primary;
+}
+
+a {
+    color: $accent-red;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
