--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -153,6 +153,54 @@
   padding-right: 2rem;
 }
 
+#account-settings {
+  position: absolute;
+  display: flex;
+  flex-flow: column nowrap;
+  width: 80%;
+  height: 60%;
+  left: 50%;
+  top: 37%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  border-radius: 0.5rem;
+  background-color: #fbfcff;
+  box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
+  padding: 1rem;
+}
+#account-settings ul {
+  margin-top: 2rem;
+  flex-grow: 1;
+}
+#account-settings ul li {
+  display: flex;
+  padding: 1rem 0;
+  border-top: 1px solid #d9dada;
+}
+#account-settings ul li:last-child {
+  border-bottom: 1px solid #d9dada;
+}
+#account-settings ul li p {
+  margin-right: 0.5rem;
+}
+#account-settings ul li h3 {
+  flex-grow: 1;
+  font-weight: 500;
+}
+#account-settings button {
+  border: 0;
+  padding: 0.7rem 1rem;
+  border-radius: 3rem;
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-sizing: border-box;
+  background-color: #0b7a75;
+  font-weight: bold;
+  color: #fbfcff;
+}
+#account-settings button:focus {
+  outline: none;
+}
+
 body {
   background-color: #fbfcff;
   width: 100vw;
@@ -160,6 +208,12 @@ body {
   overflow: hidden;
   font-family: "Roboto", sans-serif;
   color: #656769;
+}
+
+a {
+  color: #ee4949;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
