--- a/src/assets/scss/components/_quick-access.scss
+++ b/src/assets/scss/components/_quick-access.scss
@@ -8,10 +8,7 @@
     bottom: 0;
     background-color: $background-primary;
     box-sizing: border-box;
-    padding: 3rem 0 3rem 2rem;
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
-
-    transition: bottom 0.3s ease-in-out;
 
     &:not(.active) {
         bottom: -100vh + 25vh; // We want the quick access to be partially shown when not active
@@ -27,6 +24,7 @@
     }
     
     header {
+        padding: 3rem 0 0 2rem;
         &::before {
             content: '';
             position: absolute;
