--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -2,6 +2,7 @@
 @use "./components/searchbar";
 @use "./components/friendlist";
 @use "./components/usersettings";
+@use "./components/report";
 
 @import "./variables";
 
