Added settings styling

--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -3,6 +3,7 @@
 @use "./components/friendlist";
 @use "./components/usersettings";
 @use "./components/report";
+@use "./components/settings";
 
 @import "./variables";
 
