--- a/src/assets/scss/_util.scss
+++ b/src/assets/scss/_util.scss
@@ -42,3 +42,14 @@
         outline: none;
     }
 }
+
+@mixin shadow {
+    box-shadow:
+        0 1px 2.2px rgba(0, 0, 0, 0.02),
+        0 2.3px 5.3px rgba(0, 0, 0, 0.028),
+        0 4.4px 10px rgba(0, 0, 0, 0.035),
+        0 7.8px 17.9px rgba(0, 0, 0, 0.042),
+        0 14.6px 33.4px rgba(0, 0, 0, 0.05),
+        0 35px 80px rgba(0, 0, 0, 0.07)
+    ;
+}
