--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -84,6 +84,16 @@
   border-radius: 3rem;
   transform: translateX(-50%);
 }
+#quick-access #open-settings {
+  border: 0;
+  padding: 0.7rem 1rem;
+  border-radius: 3rem;
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-sizing: border-box;
+}
+#quick-access #open-settings:focus {
+  outline: none;
+}
 
 .searchbar {
   position: absolute;
@@ -330,6 +340,10 @@
   background-color: #fbfcff;
   width: 100%;
   height: 100%;
+  transition: left 0.3s ease-in-out;
+}
+#settings:not(.active) {
+  left: -100%;
 }
 #settings header {
   position: relative;
