--- a/src/assets/scss/components/_quick-access.scss
+++ b/src/assets/scss/components/_quick-access.scss
@@ -1,12 +1,12 @@
 @use './recent-trip';
-@import '../variables';
+@use '../util';
 
 #quick-access {
     position: absolute;
     width: 100%;
     height: 100vh;
     bottom: 0;
-    background-color: $background-primary;
+    background-color: util.$background-primary;
     box-sizing: border-box;
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
 
@@ -32,11 +32,15 @@
             left: 50%;
             width: 10%;
             height: 0.5rem;
-            background-color: lighten($text-secondary, 10%);
+            background-color: lighten(util.$text-secondary, 10%);
             border-radius: 3rem;
 
             transform: translateX(-50%);
         }
+    }
+
+    #open-settings {
+        @include util.button;
     }
 
 }
