--- a/src/assets/scss/components/_settings.scss
+++ b/src/assets/scss/components/_settings.scss
@@ -7,6 +7,11 @@
     background-color: util.$background-primary;
     width: 100%;
     height: 100%;
+    transition: left 0.3s ease-in-out;
+
+    &:not(.active) {
+        left: -100%;
+    }
 
     header {
         position: relative;
