Changed top to translateY for more performant animations

--- a/src/assets/scss/components/_quick-access.scss
+++ b/src/assets/scss/components/_quick-access.scss
@@ -9,6 +9,8 @@
     background-color: util.$background-primary;
     box-sizing: border-box;
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
+    transform: translateY(0);
+    will-change: transform;
 
     &:not(.active) {
         bottom: -100vh + 25vh; // We want the quick access to be partially shown when not active
