--- a/src/assets/scss/_util.scss
+++ b/src/assets/scss/_util.scss
@@ -5,8 +5,7 @@
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
     padding: 1rem;
 
-    
-    position: absolute;
+    position: fixed;
     width: 80%;
     height: 60%;
     left: 50%;
@@ -20,6 +19,30 @@
         transform: scale(0.7) translate(-71%, -65%);
         opacity: 0;
         pointer-events: none;
+    }
+}
+
+@mixin setting-page($position: left) {
+    $positionWhenActive: -100%;
+    @if ($position == left) {
+        $position: -100%;
+        $positionWhenActive: 100%
+    }
+    @else {
+        $position: 100%;
+    }
+    
+    position: fixed;
+    top: 0;
+    left: $position;
+    background-color: $background-primary;
+    width: 100%;
+    height: 100%;
+    
+    transition: transform 0.3s ease-in-out;
+
+    &.active {
+        transform: translateX($positionWhenActive);
     }
 }
 
