--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -4,6 +4,8 @@
 @use "./components/usersettings";
 @use "./components/report";
 @use "./components/settings";
+@use "./components/pod-order";
+@use "./components/payment-process";
 
 @import "./variables";
 
