--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -181,6 +181,7 @@
   background-color: #fbfcff;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   transition: transform 0.3s ease-in-out;
   box-sizing: border-box;
 }
@@ -273,6 +274,7 @@
   background-color: #fbfcff;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   transition: transform 0.3s ease-in-out;
   display: flex;
   flex-flow: column nowrap;
@@ -356,6 +358,7 @@
   background-color: #fbfcff;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   transition: transform 0.3s ease-in-out;
 }
 #settings.active {
@@ -413,6 +416,149 @@
   float: right;
 }
 
+#pod-order-view {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  background-color: #fbfcff;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
+  padding: 3rem 2rem;
+}
+#pod-order-view.active {
+  transform: translateX(-100%);
+}
+#pod-order-view form {
+  display: flex;
+  flex-flow: column nowrap;
+}
+#pod-order-view form label {
+  font-family: "Montserrat", sans-serif;
+}
+#pod-order-view form input:disabled {
+  background-color: transparent;
+  border: 0;
+  color: #656769;
+  font-weight: bold;
+  font-size: 1.8rem;
+  margin: 0.5rem 0 1.5rem;
+}
+#pod-order-view form #pod-select {
+  border-radius: 1rem;
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  margin-top: 0.5rem;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column nowrap;
+}
+#pod-order-view form #pod-select div {
+  padding: 1rem;
+}
+#pod-order-view form #pod-select div:first-of-type {
+  border-bottom: 1px solid #eff1f4;
+}
+#pod-order-view form #pod-select div.active {
+  background-color: #aed581;
+}
+#pod-order-view form h2 {
+  font-weight: normal;
+}
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #aed581;
+  fill: none;
+}
+
+.checkmark__error {
+  stroke-width: 2;
+  stroke-linecap: "square";
+  stroke-dasharray: 54px 55px;
+  stroke-dashoffset: 55px;
+  stroke-linecap: round;
+  stroke: #ee4949;
+}
+
+.checkmark {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: #aed581;
+  stroke-miterlimit: 10;
+  margin: 10% auto;
+  box-shadow: inset 0px 0px 0px #7ac142;
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+}
+
+.checkmark.loading:not(.active) .checkmark__circle {
+  animation: loading 1.6s cubic-bezier(0.65, 0, 0.45, 1) infinite;
+}
+
+.checkmark.active .checkmark__circle {
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+.checkmark.active.success {
+  animation: fill-success 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
+}
+.checkmark.active.success .checkmark__check {
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+.checkmark.active.error {
+  animation: fill-error 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
+}
+.checkmark.active.error .checkmark__circle {
+  stroke: #ee4949;
+}
+.checkmark.active.error .checkmark__error {
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes loading {
+  0% {
+    stroke-dashoffset: 166;
+  }
+  50% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: -166;
+  }
+}
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+@keyframes fill-success {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #dfefce;
+  }
+}
+@keyframes fill-error {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #f7a6a6;
+  }
+}
 body {
   background-color: #fbfcff;
   width: 100vw;
