--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -430,9 +430,24 @@
 #pod-order-view.active {
   transform: translateX(-100%);
 }
+#pod-order-view .back {
+  position: absolute;
+  right: 2rem;
+  top: 3rem;
+  width: 2rem;
+  height: 2rem;
+  border: 0;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+#pod-order-view .back:focus {
+  outline: none;
+}
 #pod-order-view form {
   display: flex;
   flex-flow: column nowrap;
+  height: 100%;
 }
 #pod-order-view form label {
   font-family: "Montserrat", sans-serif;
@@ -454,13 +469,41 @@
   flex-flow: column nowrap;
 }
 #pod-order-view form #pod-select div {
-  padding: 1rem;
+  padding: 1.5rem;
 }
 #pod-order-view form #pod-select div:first-of-type {
   border-bottom: 1px solid #eff1f4;
 }
 #pod-order-view form #pod-select div.active {
   background-color: #aed581;
+}
+#pod-order-view form .btn-group {
+  padding: 0.5rem 0;
+}
+#pod-order-view form .btn-group.first {
+  margin-top: 5rem;
+}
+#pod-order-view form #pod-pricing {
+  font-size: 1.1rem;
+  margin: auto 0 0;
+}
+#pod-order-view form #pod-pricing span {
+  font-size: 1.3rem;
+  font-weight: bold;
+  float: right;
+}
+#pod-order-view form input[type=submit] {
+  margin-top: 5rem;
+  border: 0;
+  padding: 0.7rem 1rem;
+  border-radius: 3rem;
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-sizing: border-box;
+  padding: 1.5rem;
+  background-color: #aed581;
+}
+#pod-order-view form input[type=submit]:focus {
+  outline: none;
 }
 #pod-order-view form h2 {
   font-weight: normal;
