--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -6,6 +6,7 @@
 @use "./components/settings";
 @use "./components/pod-order";
 @use "./components/payment-process";
+@use "./components/notification";
 
 @import "./variables";
 
