--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -52,6 +52,7 @@
 }
 
 #quick-access {
+  z-index: 2;
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -103,6 +104,7 @@
   top: 3rem;
   left: 50%;
   transform: translateX(-50%);
+  background-color: #fbfcff;
   padding: 0.7rem 1rem;
   border-radius: 1rem;
   box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
@@ -604,6 +606,40 @@
     box-shadow: inset 0px 0px 0px 30px #f7a6a6;
   }
 }
+#notification {
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  position: fixed;
+  overflow: hidden;
+  bottom: 15rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
+  max-height: 12rem;
+  box-sizing: border-box;
+  padding: 0.3rem 0.3rem 0.3rem 1.5rem;
+  background-color: #fbfcff;
+  font-size: 0.9rem;
+  border-radius: 0.5rem;
+  border-left: 0.5rem solid;
+  transition: width 0.3s ease-in-out 0.6s, max-height 0.3s ease-in-out 0.6s, padding 0.3s ease-in-out 0.6s, bottom 0.3s ease-in-out;
+  z-index: 1;
+}
+#notification:not(.open) {
+  padding: 0;
+  width: 0.5rem;
+  max-height: 0.5rem;
+  bottom: 11rem;
+}
+#notification.success {
+  border-color: #aed581;
+}
+#notification.warning {
+  border-color: #f4c95d;
+}
+#notification.error {
+  border-color: #ee4949;
+}
+
 body {
   background-color: #fbfcff;
   width: 100vw;
