--- a/src/assets/scss/components/_payment-process.scss
+++ b/src/assets/scss/components/_payment-process.scss
@@ -1,69 +1,80 @@
 @use '../util';
 
-.checkmark__circle {
-  stroke-dasharray: 166;
-  stroke-dashoffset: 166;
-  stroke-width: 2;
-  stroke-miterlimit: 10;
-  stroke: util.$accent-green;
-  fill: none;
-}
+#process-payment {
+  @include util.side-view(right);
+  @include util.default-side-view-header;
 
-.checkmark__error {
-  stroke-width: 2;
-  stroke-linecap: "square";
-  stroke-dasharray: 54px 55px;
-  stroke-dashoffset: 55px;
-  stroke-linecap: round;
-  stroke: util.$accent-red;
-}
+  span {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+  }
 
-.checkmark {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  display: block;
-  stroke-width: 2;
-  stroke: util.$accent-green;
-  stroke-miterlimit: 10;
-  margin: 10% auto;
-  box-shadow: inset 0px 0px 0px #7ac142;
-}
-
-.checkmark__check {
-  transform-origin: 50% 50%;
-  stroke-dasharray: 48;
-  stroke-dashoffset: 48;
-}
-
-.checkmark.loading:not(.active) {
   .checkmark__circle {
-    animation: loading 1.6s cubic-bezier(0.65, 0, 0.45, 1) infinite;
+    stroke-dasharray: 166;
+    stroke-dashoffset: 166;
+    stroke-width: 2;
+    stroke-miterlimit: 10;
+    stroke: util.$accent-green;
+    fill: none;
   }
-}
-
-.checkmark.active {
-  .checkmark__circle {
-    animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+  
+  .checkmark__error {
+    stroke-width: 2;
+    stroke-linecap: "square";
+    stroke-dasharray: 54px 55px;
+    stroke-dashoffset: 55px;
+    stroke-linecap: round;
+    stroke: util.$accent-red;
   }
-
-  &.success {
-    animation: fill-success 0.4s ease-in-out 0.4s forwards,
-      scale 0.3s ease-in-out 0.9s both;
-    .checkmark__check {
-      animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-    }
+  
+  .checkmark {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    display: block;
+    stroke-width: 2;
+    stroke: util.$accent-green;
+    stroke-miterlimit: 10;
+    margin: 10% auto;
+    box-shadow: inset 0px 0px 0px #7ac142;
   }
-
-  &.error {
-    animation: fill-error 0.4s ease-in-out 0.4s forwards,
-      scale 0.3s ease-in-out 0.9s both;
+  
+  .checkmark__check {
+    transform-origin: 50% 50%;
+    stroke-dasharray: 48;
+    stroke-dashoffset: 48;
+  }
+  
+  .checkmark.loading:not(.active) {
     .checkmark__circle {
-        stroke: util.$accent-red;
+      animation: loading 1.6s cubic-bezier(0.65, 0, 0.45, 1) infinite;
     }
-    .checkmark__error {
+  }
+  
+  .checkmark.active {
+    .checkmark__circle {
+      animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+    }
+  
+    &.success {
+      animation: fill-success 0.4s ease-in-out 0.4s forwards,
+        scale 0.3s ease-in-out 0.9s both;
+      .checkmark__check {
         animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
       }
+    }
+  
+    &.error {
+      animation: fill-error 0.4s ease-in-out 0.4s forwards,
+        scale 0.3s ease-in-out 0.9s both;
+      .checkmark__circle {
+          stroke: util.$accent-red;
+      }
+      .checkmark__error {
+          animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+        }
+    }
   }
 }
 
@@ -95,12 +106,12 @@
 }
 @keyframes fill-success {
   100% {
-    box-shadow: inset 0px 0px 0px 30px lighten(util.$accent-green, 20%);
+    box-shadow: inset 0px 0px 0px 2.5rem lighten(util.$accent-green, 20%);
   }
 }
 
 @keyframes fill-error {
     100% {
-      box-shadow: inset 0px 0px 0px 30px lighten(util.$accent-red, 20%);
+      box-shadow: inset 0px 0px 0px 2.5rem lighten(util.$accent-red, 20%);
     }
   }
