--- a/src/assets/scss/components/_authentication.scss
+++ b/src/assets/scss/components/_authentication.scss
@@ -110,7 +110,7 @@
         fieldset {
             position: relative;
 
-            &:last-of-type {
+            &:not(:first-of-type) {
                 margin-top: 1rem;
             }
     
